<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_category_apps">
        <Preference
            android:key="pref_select_apps"
            android:title="@string/pref_select_apps_title"
            android:summary="@string/pref_select_apps_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_widgets">
        <Preference
            android:key="pref_manage_widgets"
            android:title="@string/pref_manage_widgets_title"
            android:summary="@string/pref_manage_widgets_summary" />
    </PreferenceCategory>

    

    <PreferenceCategory android:title="@string/pref_category_sphere">
        <SeekBarPreference
            android:key="pref_sphere_radius"
            android:title="@string/pref_sphere_radius_title"
            android:summary="@string/pref_sphere_radius_summary"
            android:defaultValue="50" android:max="100"
            app:min="20" app:showSeekBarValue="true" />
        <SeekBarPreference
            android:key="pref_icon_size"
            android:title="@string/pref_icon_size_title"
            android:summary="@string/pref_icon_size_summary"
            android:defaultValue="50" android:max="100"
            app:min="20" app:showSeekBarValue="true" />
        <SeekBarPreference
            android:key="pref_rotation_speed"
            android:title="@string/pref_rotation_speed_title"
            android:summary="@string/pref_rotation_speed_summary"
            android:defaultValue="100" android:max="300"
            app:min="10" app:showSeekBarValue="true" />
        <Preference
            android:key="pref_gesture_tips"
            android:title="@string/pref_gesture_tips_title"
            android:summary="@string/pref_gesture_tips_summary" />
    </PreferenceCategory>

    

    <PreferenceCategory android:title="@string/pref_category_performance">
        <ListPreference
            android:key="pref_target_fps"
            android:title="@string/pref_target_fps_title"
            android:summary="@string/pref_target_fps_summary"
            android:entries="@array/target_fps_entries"
            android:entryValues="@array/target_fps_values"
            android:defaultValue="120" />
        
    </PreferenceCategory>

    <PreferenceCategory android:title="About">
        <Preference
            android:key="pref_developer"
            android:title="Developer"
            android:summary="Jaimin Detroja" />
    </PreferenceCategory>
</PreferenceScreen>
